@@ -1,0 +1,1 @@
+We use intltool. Try ../intltool-update --help
